[package]
name = "messagepack-rs-macros"
version = "0.1.0"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
license = "MIT"
description = "Procedural macros for messagepack-rs"
repository = "https://github.com/otake84/messagepack-rs"
readme = "../README.md"
keywords = ["msgpack", "MessagePack"]
categories = ["encoding"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
syn = "1.0.5"
