[package]
name = "messagepack-rs"
version = "0.8.1"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
license = "MIT"
description = "messagepack-rs is pure Rust MessagePack implementation"
repository = "https://github.com/otake84/messagepack-rs"
readme = "../README.md"
keywords = ["msgpack", "MessagePack"]
categories = ["encoding"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
chrono = "0.4.9"
messagepack-rs-macros = { version = "0.1.2", path = "../messagepack-rs-macros"}

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "stream"
path = "examples/stream.rs"

[[example]]
name = "extension1"
path = "examples/extension1.rs"

[[example]]
name = "extension2"
path = "examples/extension2.rs"
